<resources>
    <string name="app_name" translatable="false">Ft_hangouts</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="note">Notes</string>
    <string name="contact_delete">Delete contact</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="add_contact">New</string>
    <string name="delete_warning">You are about to delete this contact. This action is irreversible. Do you wish to continue?</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="image">Picture</string>
    <string name="select_picture">Select a picture</string>
    <string name="delete_picture">Delete picture</string>
    <string name="call">Call</string>
    <string name="text">Send text</string>
    <string name="incorrect_call">Could not call this number</string>
    <string name="send">Send</string>
    <string name="fail_text">Could not send this message. Please try again or verify the phone number</string>
    <string name="success_text">Message sent</string>
    <string name="send_a_message">Send a message</string>
    <string name="message">Message</string>
    <string name="need_sms_permission">Message could not be sent. You need to grant Ft_Hangouts the permission to send SMS to use this functionality</string>
    <string name="background_time">Time when put in background: </string>
    <string name="need_receive_sms_permission" >This permission is needed to read incoming SMS in the app</string>
    <string name="incoming_message">"New incoming message from "</string>
    <string name="reply">Reply</string>
    <string name="change_locale">Set language</string>
    <string name="change_color">Set header color</string>
    <string name="save">Save</string>
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    
    <string-array name="colors">
        <item>@string/white</item>
        <item>@string/red</item>
        <item>@string/blue</item>
    </string-array>

</resources>