<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="@searchView"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="409dp"
        android:layout_height="56dp"
        android:background="#00FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/language_button"
        android:layout_width="110dp"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/language"
        android:textColor="#659DB3"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/new_button"
        android:layout_width="110dp"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/add_contact"
        android:textColor="#659DB3"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="189dp"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toStartOf="@id/new_button"
        app:layout_constraintStart_toEndOf="@id/language_button"
        app:layout_constraintTop_toTopOf="parent" />

    <view
        android:id="@+id/view7"
        class="androidx.appcompat.widget.SearchView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#D3D3D3"
        app:layout_constraintBottom_toTopOf="@id/contact_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar2" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/white"
        android:queryHint="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/contact_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

    </SearchView>

    <ListView
        android:id="@+id/contact_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#EDE9E9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

</androidx.constraintlayout.widget.ConstraintLayout>