<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/contact_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="141dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <view
        android:id="@+id/view2"
        class="com.google.android.material.textfield.TextInputEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="18dp"
        android:background="#F1F1F1"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_picture"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/contact_first_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="22dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_picture"
        tools:ignore="TextContrastCheck" />

    <view
        android:id="@+id/view"
        class="com.google.android.material.textfield.TextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#9C9C9C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <view
        android:id="@+id/view3"
        class="com.google.android.material.textfield.TextInputEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:background="#F1F1F1"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/contact_last_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <view
        android:id="@+id/view4"
        class="com.google.android.material.textfield.TextInputEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="#F1F1F1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/contact_phone"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <view
        android:id="@+id/view6"
        class="com.google.android.material.textfield.TextInputEditText"
        android:layout_width="0dp"
        android:layout_height="192dp"
        android:layout_marginTop="48dp"
        android:background="#F1F1F1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/contact_note"
        android:layout_width="0dp"
        android:layout_height="192dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="22dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/note"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

</androidx.constraintlayout.widget.ConstraintLayout>